--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,14 @@
 {
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
+    "@types/chai": "^4.3.14",
     "@types/express": "^4.17.21",
+    "@types/mocha": "^10.0.6",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.12.2",
+    "chai": "^5.1.0",
+    "mocha": "^10.4.0",
+    "mongodb-memory-server": "^9.1.8",
     "nodemon": "^3.1.0"
   },
   "dependencies": {
@@ -20,7 +25,8 @@
     "dev": "npm run build:watch | nodemon",
     "start": "node ./build/server.js",
     "build": "tsc",
-    "build:watch": "tsc --watch"
+    "build:watch": "tsc --watch",
+    "test": "mocha --require ts-node/register 'tests/**/*.test.ts'"
   },
   "name": "todolist",
   "version": "1.0.0",
