--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,16 @@
 {
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
-    "@types/chai": "^4.3.14",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/mocha": "^10.0.6",
+    "@types/jest": "^29.5.12",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.12.2",
-    "chai": "^5.1.0",
-    "mocha": "^10.4.0",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.8",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.4"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -23,14 +24,14 @@
   },
   "scripts": {
     "dev": "npm run build:watch | nodemon",
-    "start": "node ./build/server.js",
+    "start": "node ./build/server/server.js",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "test": "mocha --require ts-node/register 'tests/**/*.test.ts'"
+    "test": "tsc && jest --detectOpenHandles"
   },
   "name": "todolist",
   "version": "1.0.0",
-  "main": "build/app.js",
+  "main": "build/server/server.js",
   "author": "",
   "license": "ISC",
   "description": ""
