feat(tests:usuario)implementa os testes do GET ALL e GET EMAIL

--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,7 @@
     "start": "node ./build/server/server.js",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "test": "tsc && jest --detectOpenHandles"
+    "test": "tsc && jest"
   },
   "name": "todolist",
   "version": "1.0.0",
